objects/Cost_Code__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DevCOGS__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>manually checked if included in the Dev COGS calculations</inlineHelpText>
        <label>Dev COGS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EPC_Cost_Grouping__c</fullName>
        <description>Identify what grouping the EPC Cost belongs to. Used for various tracking/categorizing purposes.</description>
        <label>EPC Cost Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Foundations</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Module Material</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Overhead / Indirects</fullName>
                </value>
                <value>
                    <fullName>Energy Storage Material</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grouping__c</fullName>
        <label>Grouping</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Civil Subcontracting</fullName>
                </value>
                <value>
                    <fullName>Electrical Materials - Borrego</fullName>
                </value>
                <value>
                    <fullName>Electrical Subcontracting</fullName>
                </value>
                <value>
                    <fullName>Engineering Subcontracting</fullName>
                </value>
                <value>
                    <fullName>ESD</fullName>
                </value>
                <value>
                    <fullName>Materials</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Other Subcontracting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Old__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PVBidComponentID__c</fullName>
        <description>PVBid ID for integration</description>
        <externalId>true</externalId>
        <label>PVBid Component ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Cost Code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Grouping__c</columns>
        <columns>Number__c</columns>
        <columns>DevCOGS__c</columns>
        <columns>Category__c</columns>
        <columns>Active__c</columns>
        <columns>PVBidComponentID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DEV_COGS_Cost_Codes</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Category__c</columns>
        <columns>PVBidComponentID__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Grouping__c</columns>
        <columns>Number__c</columns>
        <columns>EPC_Cost_Grouping__c</columns>
        <columns>DevCOGS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DevCOGS__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DEV COGS Cost Codes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EPC_Cost_Codes</fullName>
        <columns>NAME</columns>
        <columns>Number__c</columns>
        <columns>EPC_Cost_Grouping__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EPC_Cost_Grouping__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>EPC Cost Codes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Codes</pluralLabel>
    <recordTypes>
        <fullName>EPC</fullName>
        <active>true</active>
        <label>EPC</label>
    </recordTypes>
    <recordTypes>
        <fullName>O_M</fullName>
        <active>true</active>
        <label>O&amp;M</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>